# ipp3

./: CMakeLists.txt  Ipp3.cpp  Ipp3.h  Ipp3.kdev4  main.cpp
.kdev4/: Ipp3.kdev4
src/: CMakeLists.txt  DragAndDropView.cpp  DragAndDropView.h  DraggableLabel.cpp  DraggableLabel.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  Ipp3Window.cpp  Ipp3Window.h  ListView.cpp  ListView.h  Test.cpp  Test.h  main.cpp  testy.json
